tests/machine/x/kt/cast_string_to_int.kt
fun main() {
	println(("1995" as Int))
}
